@@ -7,7 +7,29 @@
 
   <groupId>app.narvi</groupId>
   <artifactId>protego-basic</artifactId>
-  <version>0.8-SNAPSHOT</version>
+  <version>0.8</version>
+
+  <description>Basic implementation of protego-core.</description>
+  <url>https://github.com/narvisoftware/protego-basic</url>
+
+  <scm>
+    <connection>scm:git:https://github.com/narvisoftware/protego-basic.git</connection>
+    <developerConnection>scm:git:https://github.com/narvisoftware/protego-basic.git</developerConnection>
+    <tag>protego-basic-0.8</tag>
+    <url>https://github.com/narvisoftware/protego-basic/tree/main</url>
+  </scm>
+
+  <developers>
+    <developer>
+      <id>mvasilache@adobe.com</id>
+      <name>Mihai Vasilache</name>
+      <email>mihai.vasilache@narvi.ro</email>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>Europe/Bucharest</timezone>
+    </developer>
+  </developers>
 
   <properties>
     <maven.compiler.source>22</maven.compiler.source>
@@ -36,7 +58,7 @@
     <dependency>
       <groupId>app.narvi</groupId>
       <artifactId>protego-core</artifactId>
-      <version>0.8-SNAPSHOT</version>
+      <version>0.8</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -111,6 +133,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.7.0</version>
+        <configuration>
+          <additionalJOption>--enable-preview</additionalJOption>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -145,6 +170,19 @@
           <target>22</target>
           <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>net.ju-n.maven.plugins</groupId>
+        <artifactId>checksum-maven-plugin</artifactId>
+        <version>1.4</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>artifacts</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -337,7 +375,7 @@
         <extensions>true</extensions>
         <configuration>
           <serverId>ossrh</serverId>
-          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
@@ -363,11 +401,11 @@
   <distributionManagement>
     <snapshotRepository>
       <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
     </snapshotRepository>
     <repository>
       <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
 
@@ -377,5 +415,14 @@
       <url>https://jitpack.io</url>
     </repository>
   </repositories>
+
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>https://opensource.org/license/mit</url>
+      <distribution>repo</distribution>
+      <comments>A business-friendly OSS license</comments>
+    </license>
+  </licenses>
 
 </project>
